--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ env:
     - LUA=luajit LUA_DEV=libluajit-5.1-dev LUA_VER=5.1 LUA_SFX=jit LUA_INCDIR=/usr/include/luajit-2.1 LUAJIT_VER=2.1
 
 before_install:
-  - if [ $LUA = "luajit" && $LUAJIT_VER = "2.0"]; then
+  - if [ $LUA = "luajit" ] && [ $LUAJIT_VER = "2.0" ]; then
       sudo add-apt-repository ppa:mwild1/ppa -y && sudo apt-get update -y;
     fi
-  - if [ $LUA = "luajit" && $LUAJIT_VER = "2.1"]; then
+  - if [ $LUA = "luajit" ] && [ $LUAJIT_VER = "2.1" ]; then
       sudo add-apt-repository ppa:neomantra/luajit-v2.1 -y && sudo apt-get update -y;
     fi
   - sudo apt-get install $LUA
